<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvDefaultDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_device"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/atvDefaultDevice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/cbAutostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/autostart" />

    </LinearLayout>

</RelativeLayout>